🎒 Be able to manage cache
